<resources>
    <string name="app_name">RectanglesInsideARectangle</string>
    <string name="piece_length">Piece length (in)</string>
    <string name="piece_height">Piece width (in)</string>
    <string name="canvas_length">Canvas length (in)</string>
    <string name="canvas_height">Canvas width (in)</string>
    <string name="_31_1">31.1</string>
    <string name="_15_1">15.1</string>
    <string name="_19_5">19.5</string>
    <string name="_4">4</string>
    <string name="go">GO</string>
    <string name="wrongDimsErrorMessage">The length is always the longer dimension</string>
    <string name="tooTallErrorMessage">The piece is too wide to fit it the canvas</string>
    <string name="boxEmptyErrorMessage">All boxes must be filled out</string>
    <string name="noneFitErrorMessage">The piece cannot fit in the canvas at all</string>
    <string name="tooShortErrorMessage">The piece length and/or width is too short</string>
    <string name="aboveZeroErrorMessage">All values must be more than or equal to zero</string>
</resources>
